--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,6 +5,8 @@ provisioner:
   name: chef_zero
 
 platforms:
+  - name: centos-6.5
+  - name: centos-7.1
   - name: ubuntu-12.04
     run_list:
     - recipe[apt::default]
